Replacer JS added

--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>JavaScript in the Browser</title>
+    <link rel="stylesheet" href="css/site.css">
 </head>
 <body>
+    <h1>Javascript in the Browser Demo</h1>
+    <div>
+        <ol>
+            <li><a href="replacer.html">Replacer Page</a></li>
+        </ol>
+    </div>
     
 </body>
 </html>
