--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div>
         <ol>
             <li><a href="replacer.html">Replacer Page</a></li>
+            <li><a href="greeting.html">Greeting Page</a></li>
         </ol>
     </div>
     
