--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <ol>
             <li><a href="replacer.html">Replacer Page</a></li>
             <li><a href="greeting.html">Greeting Page</a></li>
+            <li><a href="tipcalc.html">Tip Calculator</a></li>
         </ol>
     </div>
     
